kubernetes/prod/app-prod-deployment-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exoplanet-prod-redis
  labels:
    app: exoplanet-prod-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exoplanet-prod-redis
  template:
    metadata:
      labels:
        app: exoplanet-prod-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          command: ["redis-server"]
          args: ["--save", "1", "1"]
          ports:
            - name: redis
              containerPort: 6379
