kubernetes/prod/app-prod-service-FastAPI.yml
---
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-prod-fastapi-service
spec:
  type: ClusterIP
  selector:
    app: exoplanet-prod-fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
