kubernetes/prod/app-prod-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: exoplanet-prod-redis-service
spec:
  type: ClusterIP
  selector:
    app: exoplanet-prod-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
