kubernetes/prod/app-prod-ingress-FastAPI.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exoplanet-prod-fastapi-ingress
spec:
  rules:
    - host: christinegoh.coe332.tacc.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exoplanet-prod-fastapi-service
                port:
                  number: 8000
